# geospec-rs

./: Cargo.toml  README.md
benches/: geospec_bench.rs
src/: inference.rs  lib.rs  shapes.rs
tests/: geospec_tests.rs  integration_tests.rs  shapes.rs
