[package]
name = "geospec"
version = "0.1.0"
edition = "2021"
authors = ["JD Plumbing <jdplumbingsoflo@gmail.com>"]
description = "A geometry specification library for ECS-style simulations. Provides shape definitions (sphere, box, cylinder, etc.), dimension inference, and JSON serialization for physical objects."
license = "MIT"
repository = "https://github.com/JDPlumbing/geospec-rs"
readme = "README.md"
categories = ["mathematics", "science", "simulation"]
keywords = ["geometry", "dimensions", "geospec", "shapes"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"   # for CBOR
serde_yaml = "0.9" # for YAML

[[bench]]
name = "geospec_bench"
harness = false

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"
